<resources>
    <string name="app_name">Stitcher</string>
    <string name="btnCreate">Create Account</string>
    <string name="btnSignIn">Sign In</string>
    <string name="txtOr">---------------------------------------OR------------------------------------------------</string>
    <string name="txtWelcomeReg">Welcome to Stitcher</string>
    <string name="txtWelcomeSign">Welcome Back!</string>
    <string name="txtRegister2">Looks like you\'re new here - enter a password and let\'s go!</string>
    <string name="btnRegister">Create Account</string>
    <string name="txtSignIn2">Enter your password and we\'ll load your podcasts</string>
    <string name="btnSignScreen">Sign In</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="btnComedy">Comedy</string>
    <string name="btnNews">News</string>
    <string name="btnTrueCrime">True Crime</string>
    <string name="btnBusiness">Business</string>
    <string name="btnSocietyCulture"><![CDATA[Society&Culture]]></string>
    <string name="btnSports">Sports</string>
    <string name="btnHealthFitness"><![CDATA[Health&Fitness]]></string>
    <string name="btnArts">Arts</string>
    <string name="btnHistory">History</string>
    <string name="btnScience">Science</string>
    <string name="btnTechnology">Technology</string>
    <string name="btnFiction">Fiction</string>
</resources>