<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <ImageView
        android:id="@+id/id_stitcherlogo"
        android:layout_width="295dp"
        android:layout_height="229dp"
        android:layout_marginTop="-400dp"
        android:src="@drawable/stitcherlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/stitcherlogo" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="323dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="23dp"
        android:background="@color/design_default_color_secondary_variant"
        android:text="@string/btnCreate"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_stitcherlogo"
        app:rippleColor="@color/teal_200"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="41dp"
        android:text="@string/btnSignIn"
        app:layout_constraintBottom_toTopOf="@+id/txtOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreate"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="318dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtOr"
        app:layout_constraintBottom_toTopOf="@+id/btnApple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <ImageButton
        android:id="@+id/btnApple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="127dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOr"
        app:srcCompat="@drawable/applelogo"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="127dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGoogle"
        app:layout_constraintStart_toEndOf="@+id/btnApple"
        app:layout_constraintTop_toBottomOf="@+id/txtOr"
        app:srcCompat="@drawable/facebooklogo"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="127dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFacebook"
        app:layout_constraintTop_toBottomOf="@+id/txtOr"
        app:srcCompat="@drawable/googlelogo"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>